[fix]#7441 fix cutted arrows on firefox

--- a/assets/themes/leo/css/modules.less
+++ b/assets/themes/leo/css/modules.less
@@ -1233,6 +1233,8 @@ nav.vertical, .app-menu{
 					border-top: 6px solid transparent;
 					border-bottom: 6px solid transparent;
 					border-left: 8px solid;
+					height: 0;
+					width: 0;
 					color: @accent;
 				}
 				i{
@@ -1252,6 +1254,7 @@ nav.vertical, .app-menu{
 					border-bottom: none;
 					border-left: 6px solid transparent;
 					border-right: 6px solid transparent;
+
 				}
 			}
 		}
