--- a/assets/themes/leo/dyslexic/theme.css
+++ b/assets/themes/leo/dyslexic/theme.css
@@ -8186,6 +8186,8 @@ nav.vertical ul li a i.arrow::before,
   border-top: 6px solid transparent;
   border-bottom: 6px solid transparent;
   border-left: 8px solid;
+  height: 0;
+  width: 0;
   color: #ff8500;
 }
 nav.vertical ul li a i,
